# FireChiefTeamWasHere

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  history.py  project_memory.py  project_registry.py  vision.py
app/agents/: __init__.py  analyst.py  base.py  developer.py  docs_advisor.py  javascript_developer.py  javascript_qa.py  javascript_reviewer.py  project_advisor.py  project_chat_responder.py  project_chat_router.py  project_context.py  qa.py  reviewer.py  static_web_developer.py  static_web_reviewer.py
app/api/: __init__.py  project_service.py  server.py
app/graph/: advisory_qa.py  analyst_step.py  code_utils.py  code_validation.py  developer_step.py  error_boundary.py  integrator.py  node_qa.py  nodes.py  project_actions.py  project_brief.py  (+14 more)
docs/: README.md  architecture-edge-cases.md  architecture.md
frontend/: index.html  package-lock.json  package.json
scripts/: check_mcp.py  check_reviewer.py  demo_developer.py  demo_pipeline.py  demo_workflow.py  spike_reliability.py
sunum/: .gitignore  CodeTeam_Sunum.pptx  DEMO_PROMPTS.md  TEKNIK_DETAYLAR.md  build_deck.js  build_gif.py  package-lock.json  package.json
tests/: test_error_boundary.py  test_history.py  test_integrator.py  test_mcp_client.py  test_node_profile.py  test_nodes.py  test_pool.py  test_project_actions.py  test_project_api.py  test_project_brief.py  test_project_chat_intent.py  test_project_chat_prompts.py  test_project_edit.py  test_project_explore.py  test_project_memory.py  test_project_output.py  test_project_registry.py  test_rag.py  test_supervisor.py  test_task_profile.py  test_vision.py  test_workflow.py  test_workflow_failures.py  test_workspace_server.py
workspace/: history.db
(+41 files in other folders)
